2009-03-16  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/alert_list.php,
	godmode/agentes/module_manager_editor_network.php: Fixes to work in
	IE7.

	* godmode/alerts/configure_alert_template.php: Fixed an error when the
	template was not created and causing the example or field values to
	not shown. Fixed javascript for IE7.

	* include/styles/ie.css: Fixes for IE7.

	* include/styles/pandora.css: Added style for classes added.	

2009-03-13  Esteban Sanchez  <estebans@artica.es>

	* godmode/db/db_purge.php: Style correction.

	* godmode/modules/manage_nc_groups.php: Complete rewritten.

	* godmode/modules/manage_nc_groups_form.php: Use pandora functions.
	Needs more love.

	* godmode/reporting/map_builder.php: Some fixes to make it work in
	IE7. 

	* include/javascript/jquery.pandora.controls.js: Execute automatically
	instead of on ready. Typo fixed that was not allowing to work on IE.

	* include/styles/ie.css: Bit of style corrections.

	* include/functions_ui.php: Added the ie.css code at the bottom, so it
	has preferences over other styles.

2009-03-12  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions.php: Added safe_output_xml which makes variables
	clean for output converting html entities into numeric entities understood
	by all XML validators
	
	* operation/events/events_rss.php: Used safe_output_xml where needed.

2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* reporting/fgraph.php: Fixed interval in combined graphs. Fixed
	alert min and max values. Fixed data retrieval on boolean charts and a
	bug that was not drawing this charts.
	
	* pandoradb_data.sql: First new now has the current date.

	* operation/servers/view_server.php: Fixed progress bar height.

2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Fixed an undefined variable error.
	
2009-03-12  Esteban Sanchez  <estebans@artica.es>

	* reporting/pandora_graph.php: Added to repository. New interface to